@@ -5,12 +5,16 @@ import org.springframework.test.util.ReflectionTestUtils;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 class TripItineraryAssemblerTest {
@@ -19,14 +23,27 @@ class TripItineraryAssemblerTest {
     void assemble_shouldBuildStableSlotsFromExtractedStateAndProviderCandidates() {
         TripTravelQueryService queryService = mock(TripTravelQueryService.class);
         when(queryService.queryScenicSpots(anyString(), anyString(), anyInt())).thenReturn(List.of(
-                new TripTravelQueryService.ScenicSpot("aliyun", "poi-1", "西湖", "杭州", "120", "30", "")
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-1", "西湖", "杭州", "120.1000", "30.2000", ""),
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-2", "雷峰塔", "杭州", "120.1100", "30.2050", ""),
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-3", "中国茶叶博物馆", "杭州", "120.1200", "30.2100", ""),
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-4", "灵隐寺", "杭州", "120.3000", "30.2400", ""),
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-5", "飞来峰", "杭州", "120.3050", "30.2450", ""),
+                new TripTravelQueryService.ScenicSpot("gaode", "poi-6", "杭州植物园", "杭州", "120.3100", "30.2500", "")
         ));
         when(queryService.queryRestaurants(anyString(), anyInt())).thenReturn(List.of(
-                new TripTravelQueryService.Place("gaode", "food-1", "知味观", "杭州", "", "", "", "", "", "", "")
+                new TripTravelQueryService.Place("gaode", "food-1", "知味观", "杭州", "120.1010", "30.2010", "", "", "4.8", "80", ""),
+                new TripTravelQueryService.Place("gaode", "food-2", "楼外楼", "杭州", "120.1150", "30.2080", "", "", "4.7", "120", ""),
+                new TripTravelQueryService.Place("gaode", "food-3", "灵隐素斋", "杭州", "120.3010", "30.2410", "", "", "4.6", "60", ""),
+                new TripTravelQueryService.Place("gaode", "food-4", "龙井味道", "杭州", "120.3090", "30.2490", "", "", "4.5", "90", "")
         ));
         when(queryService.queryHotels(anyString(), anyInt())).thenReturn(List.of(
-                new TripTravelQueryService.Place("gaode", "hotel-1", "西湖国宾馆", "杭州", "", "", "", "", "", "", "")
+                new TripTravelQueryService.Place("gaode", "hotel-1", "西湖国宾馆", "杭州", "120.0900", "30.1950", "", "", "4.9", "800", "")
         ));
+        when(queryService.isRouteAvailable()).thenReturn(true);
+        when(queryService.queryRoute(anyString(), anyString(), anyString(), any(TripTravelQueryService.RouteMode.class)))
+                .thenReturn(new TripTravelQueryService.Route("gaode", TripTravelQueryService.RouteMode.WALKING, 840, 720,
+                        List.of(new TripTravelQueryService.RoutePoint(120.0900D, 30.1950D),
+                                new TripTravelQueryService.RoutePoint(120.1000D, 30.2000D))));
         TripItineraryAssembler assembler = new TripItineraryAssembler();
         ReflectionTestUtils.setField(assembler, "tripTravelQueryService", queryService);
 
@@ -37,14 +54,31 @@ class TripItineraryAssemblerTest {
 
         List<?> days = (List<?>) itinerary.get("daily_itinerary");
         assertEquals(2, days.size());
-        Map<?, ?> firstDay = (Map<?, ?>) days.getFirst();
+        Map<?, ?> firstDay = (Map<?, ?>) days.get(0);
         assertEquals("2026-09-10", firstDay.get("date"));
         List<?> slots = (List<?>) firstDay.get("slots");
         assertEquals(6, slots.size());
-        Map<?, ?> morning = (Map<?, ?>) slots.getFirst();
+        Map<?, ?> morning = (Map<?, ?>) slots.get(0);
         assertEquals("西湖", morning.get("poiName"));
         assertEquals("在知味观用餐", ((Map<?, ?>) slots.get(1)).get("skeleton"));
         assertTrue(((Map<?, ?>) slots.get(5)).get("skeleton").toString().contains("西湖国宾馆"));
+        assertTrue(!firstDay.containsKey("transportSegments"));
+        verify(queryService, never()).isRouteAvailable();
+        verify(queryService, never()).queryRoute(anyString(), anyString(), anyString(), any(TripTravelQueryService.RouteMode.class));
+
+        Map<?, ?> firstSegment = (Map<?, ?>) assembler.resolveTransportSegments(itinerary, 1).get(0);
+        assertEquals("VERIFIED", firstSegment.get("status"));
+        assertEquals(12, firstSegment.get("durationMinutes"));
+        assertEquals("120.0900", firstSegment.get("fromLongitude"));
+        assertEquals("120.1000", firstSegment.get("toLongitude"));
+        assertEquals(2, ((List<?>) firstSegment.get("routePoints")).size());
+
+        Map<?, ?> secondDay = (Map<?, ?>) days.get(1);
+        assertEquals("灵隐寺", ((Map<?, ?>) ((List<?>) secondDay.get("slots")).get(0)).get("poiName"));
+        List<String> scenicPoiIds = Stream.concat(((List<?>) firstDay.get("slots")).stream(), ((List<?>) secondDay.get("slots")).stream())
+                .filter(Map.class::isInstance).map(Map.class::cast).map(slot -> (String) slot.get("poiId"))
+                .filter(poiId -> poiId != null && poiId.startsWith("poi-")).toList();
+        assertEquals(scenicPoiIds.size(), scenicPoiIds.stream().distinct().count());
     }
 
     @Test
